--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -9,12 +10,12 @@ body {
 }
 
 a {
-  color: #7851A9;
+  color: #1dc8cd;
   transition: 0.5s;
 }
 
 a:hover, a:active, a:focus {
-  color: #7851A9;
+  color: #1dc9ce;
   outline: none;
   text-decoration: none;
 }
@@ -35,7 +36,7 @@ h1, h2, h3, h4, h5, h6 {
 .back-to-top {
   position: fixed;
   display: none;
-  background: linear-gradient(45deg, #7851A9, #FFD700);
+  background: linear-gradient(45deg, #1de099, #1dc8cd);
   color: #fff;
   padding: 2px 20px 8px 20px;
   font-size: 16px;
@@ -46,7 +47,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .back-to-top:focus {
-  background: linear-gradient(45deg, #7851A9, #FFD700);
+  background: linear-gradient(45deg, #1de099, #1dc8cd);
   color: #fff;
   outline: none;
 }
@@ -106,7 +107,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header.header-fixed {
-  background: linear-gradient(45deg, #7851A9, #FFD700);
+  background: linear-gradient(45deg, #1de099, #1dc8cd);
   padding: 20px 0;
   height: 72px;
   transition: all 0.5s;
@@ -118,15 +119,14 @@ h1, h2, h3, h4, h5, h6 {
 #intro {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(45deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/intro-bg.jpg") center top no-repeat fixed;
-  background-size: cover;
+  background: linear-gradient(45deg, #1de099, #1dc8cd);
   position: relative;
 }
 
 #intro .intro-text {
   position: absolute;
   left: 0;
-  top: 260px;
+  top: 60px;
   right: 0;
   height: calc(50% - 60px);
   display: flex;
@@ -174,9 +174,9 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 1px;
   display: inline-block;
   padding: 8px 28px;
-  border-radius: 0px;
+  border-radius: 3px;
   transition: 0.5s;
-  margin: 30px;
+  margin: 10px;
   border: 2px solid #fff;
   color: #fff;
 }
@@ -499,7 +499,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 /* About Us Section
 --------------------------------*/
 #about {
-  background: #81D5FA;
   padding: 60px 0;
 }
 
@@ -509,7 +508,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #about .about-img img {
-  margin-left: 50px;
+  margin-left: -15px;
   max-width: 100%;
 }
 
@@ -728,7 +727,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   letter-spacing: 1px;
   display: inline-block;
   padding: 8px 30px;
-  border-radius: 25px;
+  border-radius: 3px;
   transition: background 0.5s;
   margin: 10px;
   border: 2px solid #fff;
@@ -970,7 +969,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #team .member .pic {
   margin-bottom: 15px;
   overflow: hidden;
-  height: 150px;
+  height: 260px;
 }
 
 #team .member .pic img {
@@ -1070,7 +1069,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-weight: 300;
   letter-spacing: 3px;
   text-transform: uppercase;
-  color: #7851A9;
+  color: #1dc8cd;
 }
 
 #contact .contact-about p {
@@ -1088,20 +1087,20 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 18px;
   display: inline-block;
   background: #fff;
-  color: #7851A9;
+  color: #1dc8cd;
   line-height: 1;
   padding: 8px 0;
   margin-right: 4px;
-  border-radius: 0%;
+  border-radius: 50%;
   text-align: center;
   width: 36px;
   height: 36px;
   transition: 0.3s;
-  border: 1px solid #7851A9;
+  border: 1px solid #1dc8cd;
 }
 
 #contact .social-links a:hover {
-  background: #7851A9;
+  background: #1dc8cd;
   color: #fff;
 }
 
@@ -1111,7 +1110,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #contact .info i {
   font-size: 32px;
-  color: #7851A9;
+  color: #1dc8cd;
   float: left;
   line-height: 1;
 }
@@ -1123,8 +1122,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .form #sendmessage {
-  color: #7851A9;
-  border: 1px solid #7851A9;
+  color: #1dc8cd;
+  border: 1px solid #1dc8cd;
   display: none;
   text-align: center;
   padding: 15px;
@@ -1161,9 +1160,9 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .form button[type="submit"] {
-  background: linear-gradient(45deg, #7851A9, #FFD700);
+  background: linear-gradient(45deg, #1de099, #1dc8cd);
   border: 0;
-  border-radius: 0px;
+  border-radius: 20px;
   padding: 8px 30px;
   color: #fff;
 }
@@ -1176,27 +1175,159 @@ body.mobile-nav-active #mobile-nav-toggle {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #fff;
-  box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
-  padding: 30px 0;
-  color: #333;
+  background: #000;
+  padding: 0 0 30px 0;
+  color: #eee;
   font-size: 14px;
 }
 
+#footer .footer-top {
+  background: #111;
+  padding: 60px 0 30px 0;
+}
+
+#footer .footer-top .footer-info {
+  margin-bottom: 30px;
+}
+
+#footer .footer-top .footer-info h3 {
+  font-size: 34px;
+  margin: 0 0 20px 0;
+  padding: 2px 0 2px 10px;
+  line-height: 1;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  letter-spacing: 3px;
+  border-left: 4px solid #18d26e;
+}
+
+#footer .footer-top .footer-info p {
+  font-size: 14px;
+  line-height: 24px;
+  margin-bottom: 0;
+  font-family: "Montserrat", sans-serif;
+  color: #eee;
+}
+
+#footer .footer-top .social-links a {
+  font-size: 18px;
+  display: inline-block;
+  background: #333;
+  color: #eee;
+  line-height: 1;
+  padding: 8px 0;
+  margin-right: 4px;
+  border-radius: 3%;
+  text-align: center;
+  width: 36px;
+  height: 36px;
+  transition: 0.3s;
+}
+
+#footer .footer-top .social-links a:hover {
+  background: #18d26e;
+  color: #fff;
+}
+
+#footer .footer-top h4 {
+  font-size: 14px;
+  font-weight: bold;
+  color: #fff;
+  text-transform: uppercase;
+  position: relative;
+  padding-bottom: 12px;
+}
+
+#footer .footer-top h4::before, #footer .footer-top h4::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 2px;
+}
+
+#footer .footer-top h4::before {
+  right: 0;
+  background: #555;
+}
+
+#footer .footer-top h4::after {
+  background: #18d26e;
+  width: 60px;
+}
+
+#footer .footer-top .footer-links {
+  margin-bottom: 30px;
+}
+
+#footer .footer-top .footer-links ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+#footer .footer-top .footer-links ul i {
+  padding-right: 8px;
+  color: #ddd;
+}
+
+#footer .footer-top .footer-links ul li {
+  border-bottom: 1px solid #333;
+  padding: 10px 0;
+}
+
+#footer .footer-top .footer-links ul li:first-child {
+  padding-top: 0;
+}
+
+#footer .footer-top .footer-links ul a {
+  color: #eee;
+}
+
+#footer .footer-top .footer-links ul a:hover {
+  color: #18d26e;
+}
+
+#footer .footer-top .footer-contact {
+  margin-bottom: 30px;
+}
+
+#footer .footer-top .footer-contact p {
+  line-height: 26px;
+}
+
+#footer .footer-top .footer-newsletter {
+  margin-bottom: 30px;
+}
+
+#footer .footer-top .footer-newsletter input[type="email"] {
+  border: 0;
+  padding: 6px 8px;
+  width: 65%;
+}
+
+#footer .footer-top .footer-newsletter input[type="submit"] {
+  background: #18d26e;
+  border: 0;
+  width: 35%;
+  padding: 6px 0;
+  text-align: center;
+  color: #fff;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+#footer .footer-top .footer-newsletter input[type="submit"]:hover {
+  background: #13a456;
+}
+
+#footer .copyright {
+  text-align: center;
+  padding-top: 30px;
+}
+
 #footer .credits {
+  text-align: center;
   font-size: 13px;
-  color: #888;
-}
-
-#footer .footer-links a {
-  color: #666;
-  padding-left: 15px;
-}
-
-#footer .footer-links a:first-child {
-  padding-left: 0;
-}
-
-#footer .footer-links a:hover {
-  color: #1dc8cd;
+  color: #ddd;
 }
